overflow bug

--- a/components/Accordion/Accordion.module.scss
+++ b/components/Accordion/Accordion.module.scss
@@ -2,7 +2,7 @@
   padding: 0;
   list-style: none;
   border-radius: 5px;
-  width: 80%;
+  max-width: 80%;
   margin: 0 auto;
   border-width: 0px 1px 1px 1px;
   border-bottom: 1px solid rgba(220, 220, 220, 0.116);
@@ -13,6 +13,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    //avoid icon to cause overflow
+    overflow: hidden;
 
     h3 {
       margin: 0;
@@ -119,6 +121,6 @@
 
 @media (max-width: 768px) {
   .accordion {
-    width: 90%;
+    max-width: 90%;
   }
 }
